--- a/static/assets/styles/main.css
+++ b/static/assets/styles/main.css
@@ -1374,9 +1374,13 @@ Utilities
 .local-report-download-btn {
     position: sticky;
     top: 90vh;
-    left: 50%;
-    transform: translateX(-50%);
     z-index: 10;
     font-weight: bold;
 }
 
+@media (min-width: 992px) {
+    .local-report-download-btn  {
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
